add completed orders component

--- a/src/app/pages/patients/orders/orders.component.html
+++ b/src/app/pages/patients/orders/orders.component.html
@@ -1,7 +1,8 @@
 <ul>
   <li *ngFor="let hero of this.order_list">
-    {{ hero }}
+    {{ hero.nic }} | {{ hero.name }} |{{ hero.address }} |{{ hero.email }} |{{
+      hero.haircolor
+    }}
+    |{{ hero.measurements }} |{{ hero.level }}
   </li>
 </ul>
-
-fdfdfdfdfd
