--- a/src/app/pages/patients/wigs/wigs.component.html
+++ b/src/app/pages/patients/wigs/wigs.component.html
@@ -1,3 +1,9 @@
-<p>
-  wigs works!
-</p>
+<div class="row">
+  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
+    <ngx-completed></ngx-completed>
+  </div>
+
+  <div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">
+    <ngx-waiting></ngx-waiting>
+  </div>
+</div>
