--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -1,6 +1,9 @@
 // themes - our custom or/and out of the box themes
 @import 'themes';
 
+//for add materials for the project
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
 // framework component themes (styles tied to theme variables)
 @import '~@nebular/theme/styles/globals';
 @import '~@nebular/auth/styles/all';
@@ -25,7 +28,6 @@
 
 // install the framework and custom global styles
 @include nb-install() {
-
   // framework global styles
   @include nb-theme-global();
   @include nb-auth-global();
@@ -33,4 +35,4 @@
 
   // loading progress bar
   @include ngx-pace-theme();
-};
+}
