addSelectLabel function implemented

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -54,7 +54,7 @@
       </button>
 
       <button
-        *ngIf="patients_for_dialog.level == 'selected'"
+        *ngIf="patients_for_dialog.level == 'waiting'"
         type="button"
         class="btn btn-danger btn-rounded"
         (click)="addRrejectLabel()"
