addDeleveredLabel function implemented

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -68,7 +68,7 @@
         class="btn btn-primary btn-rounded"
         (click)="addDeleveredLabel()"
       >
-        Delevered
+        Deliver
       </button>
     </div>
   </mat-card-content>
