small changes in profile

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -22,18 +22,38 @@
           <td>Hair Color:</td>
           <td>:{{ patients_for_dialog.haircolor }}</td>
         </tr>
-        <tr>
-          <td>Measurement:</td>
-          <td>:{{ patients_for_dialog.measurements }}</td>
+        <!-- <tr>
+          <td>M1:</td>
+          <td>:{{ patients_for_dialog.M1 }}</td>
         </tr>
+        <tr>
+          <td>M2:</td>
+          <td>:{{ patients_for_dialog.M2 }}</td>
+        </tr> -->
+        <!-- <tr>
+          <td>M3:</td>
+          <td>:{{ patients_for_dialog.M3 }}</td>
+        </tr>
+        <tr>
+          <td>M4:</td>
+          <td>:{{ patients_for_dialog.M4 }}</td>
+        </tr> -->
+        <!-- <tr>
+          <td>M5:</td>
+          <td>:{{ patients_for_dialog.M5 }}</td>
+        </tr>
+        <tr>
+          <td>M6:</td>
+          <td>:{{ patients_for_dialog.M6 }}</td>
+        </tr> -->
         <tr>
           <td>Hair Style:</td>
           <td>:{{ patients_for_dialog.hairstyle }}</td>
         </tr>
-        <tr>
+        <!-- <tr>
           <td>Dob:</td>
           <td>:{{ patients_for_dialog.deb }}</td>
-        </tr>
+        </tr> -->
         <tr>
           <td>gender:</td>
           <td>:{{ patients_for_dialog.gender }}</td>
