make few changes

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -68,7 +68,7 @@
         *ngIf="patients_for_dialog.level == 'not-selected'"
         type="button"
         class="btn btn-success btn-rounded"
-        (click)="addSelectLabel()"
+        (click)="addSelectLabel($event)"
       >
         Select
       </button>
