--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -1,8 +1,12 @@
-<div class="header-container"
-     [class.left]="position === 'normal'"
-     [class.right]="position === 'inverse'">
+<div
+  class="header-container"
+  [class.left]="position === 'normal'"
+  [class.right]="position === 'inverse'"
+>
   <div class="logo-containter">
-    <a (click)="toggleSidebar()" href="#" class="navigation"><i class="nb-menu"></i></a>
+    <a (click)="toggleSidebar()" href="#" class="navigation"
+      ><i class="nb-menu"></i
+    ></a>
   </div>
 </div>
 
@@ -11,14 +15,20 @@
   <nb-actions
     size="medium"
     [class.right]="position === 'normal'"
-    [class.left]="position === 'inverse'">
-    <nb-action *nbIsGranted="['view', 'user']" >
-      <!-- <nb-user [nbContextMenu]="userMenu" [name]="user?.name" [picture]="user?.picture"></nb-user> -->
+    [class.left]="position === 'inverse'"
+  >
+    <nb-action *nbIsGranted="['view', 'user']">
+      <nb-user
+        [nbContextMenu]="userMenu"
+        [name]="user?.name"
+        [picture]="user?.picture"
+      ></nb-user>
     </nb-action>
-    <nb-action class="control-item" disabled icon="nb-notifications"></nb-action>
-    <nb-action class="control-item" icon="nb-email"></nb-action>
+
+    <!-- <nb-action class="control-item" disabled icon="nb-notifications"></nb-action> -->
+    <!-- <nb-action class="control-item" icon="nb-email"></nb-action>
     <nb-action class="control-item">
       <nb-search type="rotate-layout" (click)="startSearch()"></nb-search>
-    </nb-action>
+    </nb-action> -->
   </nb-actions>
 </div>
