add node server

--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -19,6 +19,7 @@
   >
     <nb-action *nbIsGranted="['view', 'user']">
       <nb-user
+        (click)="startSearch()"
         [nbContextMenu]="userMenu"
         [name]="user?.name"
         [picture]="user?.picture"
