--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -90,6 +90,15 @@
       >
         Deliver
       </button>
+
+      <button
+     
+      type="button"
+      class="btn btn-primary btn-rounded"
+      (click)="addDeleveredLabellll()"
+    >
+      Email
+    </button>
     </div>
   </mat-card-content>
 </mat-card>
