--- a/src/app/pages/emails/emails.component.html
+++ b/src/app/pages/emails/emails.component.html
@@ -1,53 +1,80 @@
 <div class="container">
   <div class="row">
     <div class="col-6 mx-auto mt-5 p-3 bg-light border border-info">
-      <form [formGroup]="infoForm" (ngSubmit)="sendMail()" #form="ngForm">
+      <form [formGroup]="infoForm" (ngSubmit)="sendMail()">
+        <label for="mailInp"></label>
+        <input
+          *ngIf="emailAddress"
+          type="text"
+          id="mailInp"
+          class="form-control border-info"
+          formControlName="email"
+          [value]="emailAddress"
+          placeholder="Email Address"
+        />
+        <input
+          *ngIf="!emailAddress"
+          type="text"
+          id="mailInp"
+          class="form-control border-info"
+          formControlName="email"
+          placeholder="Email Address"
+        />
+
+        <div
+          *ngIf="!infoForm.get('email').valid && infoForm.get('email').touched"
+          class="alert alert-danger p-1"
+        >
+          <p class="mb-0">
+            Valid Email is required.
+          </p>
+        </div>
         <label for="nameInp"></label>
         <input
           type="text"
           id="nameInp"
           class="form-control border-info"
-          formControlName="name"
+          formControlName="subject"
+          placeholder="Subject"
         />
 
         <div
-          *ngIf="name.invalid && (name.dirty || name.touched)"
+          *ngIf="
+            !infoForm.get('subject').valid && infoForm.get('subject').touched
+          "
           class="alert alert-danger p-1"
         >
-          <p *ngIf="name.errors.required" class="mb-0">
-            Name is required.
-          </p>
-          <p *ngIf="name.errors.minlength" class="mb-0">
-            Name must be at least 3 characters long.
+          <p class="mb-0">
+            Subject is required.
           </p>
         </div>
 
-        <label for="mailInp"></label>
-        <input
-          type="text"
-          id="mailInp"
-          class="form-control border-info"
-          formControlName="email"
-        />
+        <div>
+          <textarea
+          formControlName="content"
+            class="form-control border-info"
+            placeholder="Email content....."
+            rows="6"
+          >
+          </textarea>
 
-        <div
-          *ngIf="email.invalid && (email.dirty || email.touched)"
-          class="alert alert-danger p-1"
-        >
-          <p *ngIf="email.errors.required" class="mb-0">
-            Email is required.
-          </p>
-          <p *ngIf="email.errors.email" class="mb-0">
-            Email is incorrect.
-          </p>
+          <!-- <ckeditor
+            [config]="{ extraPlugins: 'divarea', height: '320' }"
+          ></ckeditor> -->
         </div>
 
         <div class="text-right mt-3">
-          <button class="btn btn-info" [disabled]="form.invalid">Send</button>
+          <button
+            [disabled]="
+              !infoForm.get('subject').valid || !infoForm.get('email').valid
+            "
+            type="submit"
+            class="btn btn-info"
+          >
+            Send
+          </button>
         </div>
       </form>
     </div>
   </div>
 </div>
-
-<!--<router-outlet></router-outlet>-->
